--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 
     "repository": {
         "type": "git",
-        "url": "git://github.com/schnjulian/vsc-autoheader.git"
+        "url": "https://github.com/SchnJulian/vsc-autoheader.git"
     },
 
     "contributes": {
