--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
             ],
 
             "icon": {
-                "light":  "./icon.png",
-                "dark":  "./icon.png"
+                "light":  "./autoheader.png",
+                "dark":  "./autoheader.png"
             },
 "configuration":{
         "properties" : {
