--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "autoheader",
     "displayName": "AutoHeader",
     "description": "Add customizable headers to your files - Supports every language!",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "publisher": "julianschnabel",
     "engines": {
         "vscode": "^1.32.0"
@@ -33,8 +33,8 @@
             ],
 
             "icon": {
-                "light":  "./logoPrev.png",
-                "dark":  "./logoPrev.png"
+                "light":  "images/icon.png",
+                "dark":  "images/icon.png"
             },
 "configuration":{
         "properties" : {
